# Projet-POO-le-jeu-de-la-vie

./: CMakeLists.txt  grid_glider.txt  life_console
grid_glider_out/: iteration_0.txt  iteration_1.txt  iteration_10.txt  iteration_11.txt  iteration_12.txt  iteration_13.txt  iteration_14.txt  iteration_15.txt  iteration_16.txt  iteration_17.txt  iteration_18.txt  iteration_19.txt  iteration_2.txt  iteration_20.txt  iteration_3.txt  iteration_4.txt  iteration_5.txt  iteration_6.txt  iteration_7.txt  iteration_8.txt  iteration_9.txt
headers/: AliveCell.h  DeadCell.h  Grid.h
include/: AliveCell.h  Cell.h  ConsoleView.h  ConwayRule.h  DeadCell.h  GUIView.h  Game.h  Grid.h  Rule.h  View.h
output/: iteration_0.txt  iteration_1.txt  iteration_2.txt  iteration_3.txt  iteration_4.txt  iteration_5.txt  iteration_6.txt  iteration_7.txt  iteration_8.txt  iteration_9.txt
output_console/: iteration_0.txt  iteration_1.txt  iteration_2.txt  iteration_3.txt  iteration_4.txt  iteration_5.txt  iteration_6.txt  iteration_7.txt  iteration_8.txt  iteration_9.txt
resources/samples/: sample1.txt
src/: AliveCell.cpp  Cell.cpp  ConsoleView.cpp  ConwayRule.cpp  DeadCell.cpp  GUIView.cpp  Game.cpp  Game.h  Grid.cpp  View.cpp  main.cpp
tests/: UnitTest.cpp
